--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "./node_modules/.bin/webpack"
+    "webpack": "./node_modules/.bin/webpack",
+    "dev-server": "./node_modules/.bin/webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "path": "^0.12.7",
     "react": "^15.4.1",
     "react-redux": "^5.0.0",
+    "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "webpack": "^2.1.0-beta.28"
   }
