--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "webpack": "^2.1.0-beta.28"
+  },
+  "devDependencies": {
+    "babel-plugin-tcomb": "^0.3.24",
+    "flow-bin": "^0.37.0",
+    "tcomb": "^3.2.15"
   }
 }
