--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/jest",
     "webpack": "./node_modules/.bin/webpack",
     "dev-server": "./node_modules/.bin/webpack-dev-server"
   },
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "jest": "^18.0.0",
     "path": "^0.12.7",
     "react": "^15.4.1",
     "react-redux": "^5.0.0",
@@ -24,7 +25,12 @@
   },
   "devDependencies": {
     "babel-plugin-tcomb": "^0.3.24",
+    "enzyme": "^2.6.0",
     "flow-bin": "^0.37.0",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
     "tcomb": "^3.2.15"
   }
 }
